opam-version: "2.0"
maintainer:   ["Martin Lucina <martin@lucina.net>"
               "Thomas Gazagnaire <thomas@gazagnaire.org>"]
homepage:     "https://gmplib.org/"
license:      ["LGPL-3.0-only" "LGPL-2.0-only"]
authors:      "Torbjörn Granlund and contributors"
bug-reports:  "mirageos-devel@lists.xenproject.org"

build: [
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml"
  "dune" {>= "2.4.0"}
]

pin-depends: ["solo5.dev" "git+https://github.com/samoht/ocaml-solo5.git#dune"]

available: arch = "x86_64" | arch = "x86_64"
synopsis: "The GNU Multiple Precision Arithmetic Library"
description: "Freestanding build of GNU GMP."
